syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto.service";

//TODO: Complete handshake (authenticate) and version info message types

message PingRequestMsg {
}

message PingResponseMsg {
}

message AuthenticateRequestMsg {

}

message AuthenticateResponseMsg {

}

message RestartRequestMsg {
}

message RestartResponseMsg {
}

message ResetRequestMsg {
}

message ResetResponseMsg {
}

message SealRequestMsg {
  int64 epoch = 1;
}

message SealResponseMsg {
}
